--- a/LoginComponentCypressTest/package.json
+++ b/LoginComponentCypressTest/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "cypress": "^9.4.1"
+  },
+  "devDependencies": {
+    "cypress-cucumber-preprocessor": "^4.3.1"
   }
 }
