--- a/LoginComponentCypressTest/package.json
+++ b/LoginComponentCypressTest/package.json
@@ -1,8 +1,9 @@
 {
-  "dependencies": {
-    "cypress": "^9.4.1"
-  },
   "devDependencies": {
+    "cypress": "^9.4.1",
     "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
